--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
+        <img src="http://www.gabarro.com/gabarro/media/img/mail/nadal2014/nadal2014_cat.jpg">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Rafa Bancells
         </h1>
       </div>
       <div class="comunidad-autoria">
