--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
+        <img src="https://www.facebook.com/photo.php?fbid=118921501593723&set=a.109563952529478.18913.100004276213827&type=1&source=11">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Rafa Bancells
         </h1>
       </div>
       <div class="comunidad-autoria">
