imatge perfil canviada

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="https://www.facebook.com/photo.php?fbid=118921501593723&set=a.109563952529478.18913.100004276213827&type=1&source=11">
+        <img src="https://pbs.twimg.com/profile_images/2942786138/970b8807c3ba1f8b6407ca971cfe5af8_bigger.jpeg">
         <h1 class="sidebar_information_title">
           Rafa Bancells
         </h1>
